--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
 }
